Integration with gallery api and some navigation points - WIP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <app-sidemenu></app-sidemenu>
   </div>
   <div class="content-wrapper">
-    <h1>Seja bem vindo</h1>
+    <router-outlet></router-outlet>
   </div>
 </main>
+<div class="dynamic-background"></div>
