--- a/src/app/components/sidemenu/sidemenu.component.scss
+++ b/src/app/components/sidemenu/sidemenu.component.scss
@@ -1,6 +1,7 @@
+@import '../../styles/typography';
+
 nav.sidemenu {
   width: 250px;
-  background-color: #eeee;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -8,6 +9,14 @@ nav.sidemenu {
   ul.gallery-menu {
     width: 100%;
     height: auto;
+    list-style: none;
+    margin: 0;
+    padding:0;
+    > li {
+      ul {
+        list-style: none;
+      }
+    }
   }
 
   ul.navigation-menu {
@@ -16,17 +25,30 @@ nav.sidemenu {
     list-style: none;
     margin-top: auto;
     width: 100%;
+    > li {
+      ul {
+        list-style: none;
+      }
+    }
+
 
     li {
       padding: 12px 16px;
 
-      // a {
-
-      // }
-
       &:hover {
         background-color: yellow;
       }
+    }
+  }
+
+  .gallery-menu,
+  .navigation-menu {
+    ul {
+
+    }
+    a {
+      font-family: 'Questrial';
+      text-decoration: none;
     }
   }
 }
