--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 body { margin: 0 }
+// @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
+@font-face {
+	font-family: 'Atilla Normal';
+	src: url('./assets/fonts/Atilla_Normal.eot');
+	src:  local('☺'),
+        url('./assets/fonts/Atilla_Normal.woff') format('woff'),
+        url('./assets/fonts/Atilla_Normal.ttf') format('truetype'),
+        url('./assets/fonts/Atilla_Normal.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
