--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <app-sidemenu></app-sidemenu>
   </div>
   <div class="content-wrapper">
+    <div class="copyright">Copyright &copy; 2021 - 1/1</div>
     <router-outlet></router-outlet>
   </div>
 </main>
