--- a/src/app/components/sidemenu/sidemenu.component.scss
+++ b/src/app/components/sidemenu/sidemenu.component.scss
@@ -1,7 +1,7 @@
 @import '../../styles/typography';
 
 nav.sidemenu {
-  width: 250px;
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
