--- a/src/app/components/sidemenu/sidemenu.component.scss
+++ b/src/app/components/sidemenu/sidemenu.component.scss
@@ -13,8 +13,14 @@ nav.sidemenu {
     margin: 0;
     padding:0;
     > li {
+      a {
+        cursor: pointer;
+      }
       ul {
         list-style: none;
+        > li > a {
+          cursor: pointer;
+        }
       }
     }
   }
