--- a/src/app/gallery/gallery/gallery.component.html
+++ b/src/app/gallery/gallery/gallery.component.html
@@ -1,6 +1,7 @@
-<section class="gallery">
+<!-- <section class="gallery">
   <div class="thumbs-wrapper">
     <div *ngFor="let thumb of galleryImages" class="thumb" [style.background-image]="'url(' + mountImageUrl(thumb) + ')'"></div>
 
   </div>
-</section>
+</section> -->
+<p>GALLERY WORKS</p>
