--- a/src/app/components/sidemenu/sidemenu.component.scss
+++ b/src/app/components/sidemenu/sidemenu.component.scss
@@ -1,10 +1,13 @@
 @import '../../styles/typography';
+@import '../../styles/media';
 
 nav.sidemenu {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  padding: 24px 16px;
+  box-sizing: border-box;
 
   ul.gallery-menu {
     width: 100%;
@@ -15,11 +18,13 @@ nav.sidemenu {
     > li {
       a {
         cursor: pointer;
+        color: #fff;
       }
       ul {
         list-style: none;
         > li > a {
           cursor: pointer;
+          color: #fff;
         }
       }
     }
@@ -49,12 +54,10 @@ nav.sidemenu {
 
   .gallery-menu,
   .navigation-menu {
-    ul {
-
-    }
     a {
       font-family: 'Questrial';
       text-decoration: none;
+      color: #FFF;
     }
   }
 }
