--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-body { margin: 0 }
+body {
+  margin: 0;
+  background-color: #000;
+}
 // @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
 @font-face {
