Addition of loader, fixed behavior for sidemenu and gallery

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,5 @@
     <router-outlet></router-outlet>
   </div>
 </main>
-<div class="dynamic-background"></div>
+<app-dynamic-background></app-dynamic-background>
+<ngx-ui-loader></ngx-ui-loader>
