--- a/src/app/components/dynamic-background/dynamic-background.component.scss
+++ b/src/app/components/dynamic-background/dynamic-background.component.scss
@@ -1,8 +1,11 @@
 .banner-wrapper {
   width: 100%;
   height: 100%;
-  z-index: 999;
+  z-index: 0;
   position: absolute;
+  background-color: lightpink;
   top: 0;
   left: 0;
+  margin: 0;
+  padding: 0;
 }
