--- a/src/app/components/dynamic-background/dynamic-background.component.scss
+++ b/src/app/components/dynamic-background/dynamic-background.component.scss
@@ -3,9 +3,12 @@
   height: 100%;
   z-index: 0;
   position: absolute;
-  background-color: lightpink;
   top: 0;
   left: 0;
   margin: 0;
   padding: 0;
+}
+
+:host ::ng-deep .carousel-control {
+  display: none;
 }
