Pagination, individual loader for images

--- a/src/app/components/loader/loader.component.html
+++ b/src/app/components/loader/loader.component.html
@@ -1,1 +1,4 @@
-<div class="loader">Loading...</div>
+<ngx-ui-loader [loaderId]="loaderId" [fgsTemplate]="loaderTemplate"></ngx-ui-loader>
+<ng-template #loaderTemplate>
+  <h1>LOADING...</h1>
+</ng-template>
