--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,5 +7,5 @@
     <router-outlet></router-outlet>
   </div>
 </main>
-<app-dynamic-background></app-dynamic-background>
+<app-dynamic-background *ngIf="displayDynamicBanners"></app-dynamic-background>
 <ngx-ui-loader></ngx-ui-loader>
