--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -29,8 +29,9 @@ main.main-container {
 
 .content-wrapper {
   flex: 1;
-  max-width: calc(100vw - 252px);
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   @media only screen
   and (min-device-width: 320px)
@@ -42,6 +43,8 @@ main.main-container {
 
   .copyright {
     margin-left: auto;
+    padding: 16px 52px;
+    color: #FFF;
   }
 }
 
