--- a/src/app/gallery/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery/gallery.component.scss
@@ -4,43 +4,119 @@ $spinner-size: 60px;
 @import "~scss-spinners/spinners";
 
 section.gallery {
-  width: 100%;
+  max-height: 100vh;
+  padding-top: 36px;
+  padding-left: 90px;
   display: flex;
-  flex-direction: column;
 
-  .thumbs-wrapper {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    padding: 16px 0 0 48px;
+  .thumb-wrapper {
+    column-gap: 5px;
+    display: grid;
+    flex: 1;
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 5px;
+
+    &.medium {
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
 
     .thumb {
-      background-position: top center;
-      background-size: cover;
-      margin: 8px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      background-color: orange;
+      box-sizing: border-box;
+      position: relative;
 
-      &.large {
-        width: 468px;
-        height: 468px;
-      }
+      &__loader {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: #000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: opacity ease .65s;
 
-      &.medium {
-        width: 300px;
-        height: 300px;
-      }
-
-
-      .spinner {
-        opacity: 1;
-        will-change: opacity;
+        img {
+          object-fit: fill
+        }
 
         &.hidden {
-          opacity: 0;
+          display: none;
+          // opacity: 0;
         }
       }
+
+      &__image {
+        width: 100%;
+        margin: 0 auto;
+      }
     }
+  }
+
+  .prev-item,
+  .next-item {
+    color: #fff;
+    font-size: 32px;
+    background: center center no-repeat;
+    background-size: contain;
+    align-self: flex-end;
+    padding: 0 24px;
+    cursor: pointer;
+
+    &.hidden {
+      opacity: 0;
+    }
+  }
+
+  .prev-item {
+    background-image: url('../../../assets/images/seta-esq.png');
+  }
+
+  .next-item {
+    background-image: url('../../../assets/images/seta-dir.png');
+  }
+}
+
+
+.custom-loader,
+.custom-loader:after {
+  border-radius: 50%;
+  width: 10em;
+  height: 10em;
+}
+.custom-loader {
+  margin: 60px auto;
+  font-size: 10px;
+  position: relative;
+  text-indent: -9999em;
+  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
+  border-left: 1.1em solid #ffffff;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load8 1.1s infinite linear;
+  animation: load8 1.1s infinite linear;
+}
+@-webkit-keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes load8 {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
