Big progress on gallery, navigating to child item, extension of gallery store

--- a/src/app/components/sidemenu/sidemenu.component.html
+++ b/src/app/components/sidemenu/sidemenu.component.html
@@ -9,6 +9,14 @@
             {{child.titlePt}}<br>
             {{child.titleEn}}
           </a>
+
+          <!-- <ul ng-if="child.children" class="nav nav-pills nav-stacked">
+            <li ng-repeat="child in child.children" class="c-children">
+              <a ui-sref="main.gallery.thumbs({tipoThumb: child.tipo_thumb, tipo: child.sref, id: child.id, page: 1})">
+                {{child.titleEn}}
+              </a>
+            </li>
+          </ul> -->
         </li>
       </ul>
     </li>
