Enhancing gallery, sidemenu and paint view

--- a/src/app/components/copyright/copyright.component.html
+++ b/src/app/components/copyright/copyright.component.html
@@ -1,1 +1,1 @@
-<p class="copyright">Copyright &copy; {{currentYear}} - {{currentPage}}/{{totalPages}}</p>
+<span class="copyright">Copyright &copy; {{currentYear}} - {{currentPage}}/{{totalPages}}</span>
