--- a/src/app/gallery/gallery/gallery.component.scss
+++ b/src/app/gallery/gallery/gallery.component.scss
@@ -5,9 +5,10 @@ $spinner-size: 60px;
 
 section.gallery {
   max-height: 100vh;
-  padding-top: 36px;
   padding-left: 90px;
   display: flex;
+  position: relative;
+  padding-top: 50px;
 
   .thumb-wrapper {
     column-gap: 5px;
@@ -24,6 +25,20 @@ section.gallery {
       background-color: orange;
       box-sizing: border-box;
       position: relative;
+      cursor: pointer;
+      opacity: 0.75;
+      transition: opacity .5s ease-out;
+      -moz-transition: opacity .5s ease-out;
+      -webkit-transition: opacity .5s ease-out;
+      -o-transition: opacity .5s ease-out;
+
+      @media screen and (max-width: 1024px) {
+        opacity: 1;
+      }
+
+      &:hover {
+        opacity: 1;
+      }
 
       &__loader {
         width: 100%;
@@ -56,13 +71,10 @@ section.gallery {
 
   .prev-item,
   .next-item {
-    color: #fff;
-    font-size: 32px;
-    background: center center no-repeat;
-    background-size: contain;
     align-self: flex-end;
     padding: 0 24px;
     cursor: pointer;
+    padding-bottom: 90px;
 
     &.hidden {
       opacity: 0;
@@ -70,11 +82,14 @@ section.gallery {
   }
 
   .prev-item {
-    background-image: url('../../../assets/images/seta-esq.png');
+    width: 20px;
+    height: 80px;
+    margin-right: 16px;
   }
 
   .next-item {
-    background-image: url('../../../assets/images/seta-dir.png');
+    width: 22px;
+    height: 82px;
   }
 }
 
