--- a/src/app/components/copyright/copyright.component.scss
+++ b/src/app/components/copyright/copyright.component.scss
@@ -1,5 +1,11 @@
 .copyright {
   color: #FFF;
+  display: inline-block;
   padding: 16px 52px;
   text-align: right;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 20px;
+  z-index: 50;
 }
