--- a/src/app/components/sidemenu/sidemenu.component.scss
+++ b/src/app/components/sidemenu/sidemenu.component.scss
@@ -1,63 +1,226 @@
-@import '../../styles/typography';
-@import '../../styles/media';
+.sidemenu {
+	position: fixed;
+	z-index: 2;
+	top: 53px;
+	left: 5px;
+	opacity: 1;
+  .category-nav {
 
-nav.sidemenu {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  padding: 24px 16px;
-  box-sizing: border-box;
-
-  ul.gallery-menu {
-    width: 100%;
-    height: auto;
-    list-style: none;
-    margin: 0;
-    padding:0;
-    > li {
-      a {
-        cursor: pointer;
+    accordion-group ::ng-deep {
+      * {
+        font-family: 'Atilla Normal';
+        background-color: transparent;
+        border: none;
         color: #fff;
+        box-shadow: none;
+        text-decoration: none;
+
       }
-      ul {
-        list-style: none;
-        > li > a {
+
+      .card-header,
+      .btn {
+        padding: 0
+      }
+      .card-header {
+        padding-left: 15px;
+      }
+
+      .nav {
+        padding-left: 32px;
+      }
+
+      a:hover,
+        a:focus {
+          color: #58edb1;
+          text-decoration: none
+        }
+
+        a:active {
+          color: #E8E825
+        }
+
+      .children {
+        &:not(:last-child) {
+          margin-bottom: 12px;
+        }
+
+        a:focus {
+          span {
+            color: #58edb1;
+            text-decoration: none
+          }
+        }
+
+        a:active {
+          span {
+            color: #E8E825
+          }
+        }
+
+        a {
           cursor: pointer;
-          color: #fff;
+
+          &:hover,
+          &:focus {
+            background-color: transparent !important;
+          }
+
+          span {
+            display: inline-block;
+            width: 100%;
+            line-height: 13px;
+          }
+        }
+        .c-father {
+          margin-bottom: 9px;
+        }
+        .c-children a{
+          font-family: 'Arial';
+          text-transform: uppercase;
+          font-size: 12px;
+          line-height: 0;
+          margin-bottom: -10px;
+          &:last-child(0){
+            margin-bottom: 10px;
+          }
         }
       }
     }
   }
 
-  ul.navigation-menu {
-    margin: 0;
+	.section-nav {
+		position: fixed;
+		bottom: 20px;
+		a {
+			font-family: 'Arial';
+			text-transform: uppercase;
+			line-height: 0px;
+			font-size: 13px;
+			&:hover,
+			&:focus {
+				background-color: transparent !important;
+			}
+		}
+	}
+	.panel-group .panel-heading + .panel-collapse > .panel-body,
+	.panel-group .panel-heading + .panel-collapse > .list-group {
+		border-top: 0;
+	}
+	.children {
+		a {
+			font-family: 'Arial';
+			text-transform: uppercase;
+			line-height: 13px;
+			font-size: 12px;
+			&:hover,
+			&:focus {
+				background-color: transparent !important;
+			}
+		}
+		.c-father {
+			margin-bottom: 9px;
+		}
+		.c-children a{
+			font-family: 'Arial';
+			text-transform: uppercase;
+			font-size: 12px;
+			line-height: 0;
+			margin-bottom: -10px;
+			&:last-child(0){
+				margin-bottom: 10px;
+			}
+		}
+	}
+}
+.btn-action-gallery {
+  width: 100%;
+  height: 32px;
+  padding: 0;
+  position: fixed;
+  bottom: 20px;
+  ul {
     padding: 0;
     list-style: none;
-    margin-top: auto;
-    width: 100%;
-    > li {
-      ul {
-        list-style: none;
-      }
-    }
-
-
+    box-sizing: border-box;
+    padding-left: 12px;
     li {
-      padding: 12px 16px;
-
-      &:hover {
-        background-color: yellow;
-      }
+      float: left;
+      margin-right: 5px;
     }
   }
+}
 
-  .gallery-menu,
-  .navigation-menu {
-    a {
-      font-family: 'Questrial';
-      text-decoration: none;
-      color: #FFF;
-    }
-  }
+.toggle {
+  position: fixed;
+  top: 20px;
+  right: 0;
+  bottom: 0;
+  left: 20px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  z-index: 1;
+  font-size: 30px;
+  color: black;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.far-left {
+  left: 230px;
+}
+
+.toggle:hover { color: #29D4E8; }
+
+.sidebar {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+  position: fixed;
+  top: 0px;
+  right: 0;
+  bottom: 0px;
+  left: -220px;
+  width: 220px;
+  padding: 30px;
+  background: #333;
+  color: white;
+  z-index: 99999;
+}
+.show-sdbar {
+  left: 0px
+}
+
+.sidebar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar li {
+  text-transform: uppercase;
+  opacity: .5;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  transition: all 0.5s ease-in;
+}
+
+.sidebar li:hover {
+  opacity: 1;
+  color: #29D4E8;
+}
+
+#sidebartoggler { display: none; }
+
+#sidebartoggler:checked + .page-wrapper .sidebar { left: 0px; }
+
+#sidebartoggler:checked + .page-wrapper .toggle { left: 200px; }
+
+#sidebartoggler:checked + .page-wrapper .page-content { padding-left: 200px; }
+
+.page-content {
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
