--- a/src/app/gallery/gallery/gallery.component.html
+++ b/src/app/gallery/gallery/gallery.component.html
@@ -4,7 +4,7 @@
     class="prev-item"
     (click)="navigateToPage('PREV')"
     [ngClass]="selectedItem.pages > 1 && convertToInt(currentPage) > 1 ? 'visible' : 'hidden'">
-    &nbsp;
+    <img src="assets/images/seta-esq.png" alt="">
   </div>
   <div class="thumb-wrapper" [ngClass]="thumbType == '1' ? 'large' : 'medium'">
     <div *ngFor="let thumb of galleryImages$ | async; let _index = index" class="thumb" (click)="selectItem(thumb.id)">
@@ -14,5 +14,7 @@
       <img [src]="mountImageUrl(thumb)" (load)="closeLoader(loaderElm)" class="thumb__image" [alt]="thumbType">
     </div>
   </div>
-  <div class="next-item" (click)="navigateToPage('NEXT')" [ngClass]="selectedItem.pages > 1 && currentPage !== selectedItem.pages.toString() ? 'visible' : 'hidden'">&nbsp;</div>
+  <div class="next-item" (click)="navigateToPage('NEXT')" [ngClass]="selectedItem.pages > 1 && currentPage !== selectedItem.pages.toString() ? 'visible' : 'hidden'">
+    <img src="assets/images/seta-dir.png" alt="">
+  </div>
 </section>
