--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 body {
   margin: 0;
   background-color: #000;
+  line-height: normal !important;
 }
 // @import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 
