--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -52,3 +52,12 @@ main.main-container {
   left: 0;
   z-index: 0;
 }
+
+.copyright {
+  font-size: 14px;
+  text-align: right;
+  color: #fff;
+  padding-top: 5px;
+  padding-right: 120px;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
