--- a/src/app/components/copyright/copyright.component.scss
+++ b/src/app/components/copyright/copyright.component.scss
@@ -1,11 +1,12 @@
 .copyright {
   color: #FFF;
   display: inline-block;
-  padding: 16px 52px;
-  text-align: right;
-  width: 100%;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 14px;
   position: absolute;
-  top: 0;
-  right: 20px;
+  right: 120px;
+  text-align: right;
+  top: 5px;
+  width: 100%;
   z-index: 50;
 }
