--- a/src/app/components/sidemenu/sidemenu.component.scss
+++ b/src/app/components/sidemenu/sidemenu.component.scss
@@ -88,19 +88,39 @@
     }
   }
 
-	.section-nav {
-		position: fixed;
-		bottom: 20px;
-		a {
-			font-family: 'Arial';
-			text-transform: uppercase;
-			line-height: 0px;
-			font-size: 13px;
-			&:hover,
-			&:focus {
-				background-color: transparent !important;
-			}
-		}
+  .section-nav {
+    position: fixed;
+    bottom: 20px;
+    a {
+      font-family: 'Arial';
+      text-transform: uppercase;
+      text-decoration: none;
+      line-height: 0px;
+      font-size: 13px;
+      color: #FFF;
+      padding-left: 20px;
+      &:hover,
+      &:focus {
+        background-color: transparent !important;
+      }
+    }
+
+    .action-buttons {
+      margin-top: 24px;
+
+      &__action {
+        display: inline-flex;
+        align-items: center;
+
+        i {
+          font-size: 16px;
+        }
+        span {
+          padding-left: 8px;
+          text-transform: lowercase;
+        }
+      }
+    }
 	}
 	.panel-group .panel-heading + .panel-collapse > .panel-body,
 	.panel-group .panel-heading + .panel-collapse > .list-group {
