--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,45 @@ body {
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+  font-family: 'icomoon';
+  /* Import the files from the correct directory -> assets/icon/ */
+  src: url('assets/icon/icomoon.eot?112bs6');
+  src: url('assets/icon/icomoon.eot?112bs6#iefix') format('embedded-opentype'),
+    url('assets/icon/icomoon.ttf?112bs6') format('truetype'),
+    url('assets/icon/icomoon.woff?112bs6') format('woff'),
+    url('assets/icon/icomoon.svg?112bs6#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-collapse:before {
+  content: "\e900";
+}
+
+.icon-expand:before {
+  content: "\e901";
+}
+
+.icon-gallery:before {
+  content: "\e902";
+}
+
