Missing pages, responsiviness for menu, gallery and pages, TODO: finalize responsiviness and adjusts requested by the client

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<main class="main-container">
+<main class="main-container" [ngClass]="getBackgroundClass()">
   <div class="menu-wrapper">
     <app-sidemenu></app-sidemenu>
   </div>
