--- a/src/app/components/sidemenu/sidemenu.component.html
+++ b/src/app/components/sidemenu/sidemenu.component.html
@@ -1,5 +1,11 @@
-<nav class="sidemenu">
-  <div class="category-nav">
+<nav class="sidemenu"[ngClass]="!isMenuActive ? 'closed' : 'open' ">
+  <button class="hamburger hamburger--spring" [ngClass]="isMenuActive ? 'is-active' : ''" type="button" (click)="isMenuActive = !isMenuActive">
+    <span class="hamburger-box">
+      <span class="hamburger-inner"></span>
+    </span>
+  </button>
+  <div class="logo"></div>
+  <div class="category-nav" *ngIf="isGalleryMenuVisible">
     <accordion [closeOthers]="true" [isAnimated]="true">
       <accordion-group [heading]="item.title" *ngFor="let item of menuItems$ | async; let _index = index" class="parent">
         <ul class="nav flex-column nav-pills">
@@ -15,15 +21,15 @@
   </div>
   <div class="section-nav">
     <ul class="nav flex-column nav-pills">
-      <li><a href="">Contact</a></li>
       <li><a routerLink="/">Home</a></li>
-      <li><a href="">About Me</a></li>
-      <li class="action-buttons">
+      <li><a routerLink="/about-me">About Me</a></li>
+      <li><a routerLink="/contact-me">Contact</a></li>
+      <li class="action-buttons" *ngIf="isControlButtonsVisible"> <!-- display buttons only if it's gallery-->
         <a class="action-buttons__action" (click)="requestFullscreen()">
           <i class="icon" [ngClass]="isFullscreenActive ? 'icon-collapse' : 'icon-expand'"></i>
           <span>Fullscreen: {{isFullscreenActive ? 'on' : 'off'}}</span>
         </a>
-        <a class="action-buttons__action">
+        <a class="action-buttons__action" (click)="goBackToGallery()" *ngIf="isGoToGalleryButtonVisible"> <!-- display button only if in view route -->
           <i class="icon icon-gallery"></i>
           <span>go back to gallery</span>
         </a>
