--- a/src/app/gallery/thumbs/gallery.component.html
+++ b/src/app/gallery/thumbs/gallery.component.html
@@ -1,20 +1,30 @@
-<app-copyright [currentPage]="currentPage" [totalPages]="totalPages$"></app-copyright>
-<section class="gallery" *ngIf="selectedGalleryItem$ | async as selectedItem">
-  <div
-    class="prev-item"
-    (click)="navigateToPage('PREV')"
-    [ngClass]="selectedItem.pages > 1 && convertToInt(currentPage) <= 1 ? 'hidden' : 'visible'">
-    <img src="assets/images/seta-esq.png" alt="">
-  </div>
-  <div class="thumb-wrapper" [ngClass]="thumbType == '1' ? 'large' : 'medium'">
-    <div *ngFor="let thumb of galleryImages$ | async; let _index = index" class="thumb" (click)="selectItem(thumb.id)">
-      <div class="thumb__loader" [attr.loaderId]="'loader-' + _index" #loaderElm>
-        <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
-      </div>
-      <img [src]="mountImageUrl(thumb)" (load)="closeLoader(loaderElm)" class="thumb__image" [alt]="thumbType" ondragstart="return false">
+<div class="desktop">
+  <app-copyright [currentPage]="currentPage" [totalPages]="totalPages$"></app-copyright>
+  <section class="gallery" *ngIf="selectedGalleryItem$ | async as selectedItem">
+    <div
+      class="prev-item"
+      (click)="navigateToPage('PREV')"
+      [ngClass]="selectedItem.pages > 1 && convertToInt(currentPage) <= 1 ? 'hidden' : 'visible'">
+      <img src="assets/images/seta-esq.png" alt="">
     </div>
-  </div>
-  <div class="next-item" (click)="navigateToPage('NEXT')" [ngClass]="selectedItem.pages > 1 && currentPage !== selectedItem.pages.toString() ? 'visible' : 'hidden'">
-    <img src="assets/images/seta-dir.png" alt="">
-  </div>
-</section>
+    <div class="thumb-wrapper" [ngClass]="thumbType == '1' ? 'large' : 'medium'">
+      <div *ngFor="let thumb of galleryImages$ | async; let _index = index" class="thumb" (click)="selectItem(thumb.id)">
+        <div class="thumb__loader" [attr.loaderId]="'loader-' + _index" #loaderElm>
+          <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+        </div>
+        <img [src]="mountImageUrl(thumb)" (load)="closeLoader(loaderElm)" class="thumb__image" [alt]="thumbType" ondragstart="return false">
+      </div>
+    </div>
+    <div class="next-item" (click)="navigateToPage('NEXT')" [ngClass]="selectedItem.pages > 1 && currentPage !== selectedItem.pages.toString() ? 'visible' : 'hidden'">
+      <img src="assets/images/seta-dir.png" alt="">
+    </div>
+  </section>
+</div>
+<div class="mobile" >
+  <carousel [isAnimated]="false" appCarouselSwipe>
+    <slide *ngFor="let image of allImages$ | async let _index = index">
+      <img [src]="getImageUrl(image)" [alt]="image.titulo" style="display: block; height: 100vh; width: auto">
+    </slide>
+  </carousel>
+</div>
+
