--- a/src/app/gallery/thumbs/gallery.component.scss
+++ b/src/app/gallery/thumbs/gallery.component.scss
@@ -13,11 +13,47 @@ $spinner-size: 60px;
   border-radius: 50%;
 }
 
+::ng-deep .carousel {
+
+  slide {
+    position: relative;
+
+    .carousel-caption {
+      position: absolute;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      background-color: rgba(255, 255, 255, .45);
+      -webkit-backdrop-filter:saturate(120%) blur(30px);
+      backdrop-filter: saturate(120%) blur(30px);
+
+      .content {
+        padding: 8px 12px;
+        z-index: 10;
+
+        p, a {
+          font-family: 'Atilla Normal';
+          font-size: 14px;
+          text-decoration: none;
+        }
+        p {
+          color: #FFF;
+        }
+        a {
+          color: #4B3F72;
+        }
+      }
+
+    }
+  }
+}
+
+
 ::ng-deep .carousel .sr-only {
   display: none;
 }
 
-@include media(">phone", "<desktop") {
+@include media(">=phone", "<desktop") {
   .desktop {
     display: none;
   }
