--- a/src/app/about-me/page/page.component.scss
+++ b/src/app/about-me/page/page.component.scss
@@ -20,7 +20,7 @@ section.about-me {
     display: none
   }
 
-  @include media(">phone", "<desktop") {
+  @include media(">=phone", "<desktop") {
 
     background-position: top center;
     background-size: cover;
@@ -34,7 +34,7 @@ section.about-me {
     .content {
       width: 100vw;
       height: calc(100vh);
-      padding: 0 16px 16px 16px;
+      padding: 64px 16px 16px 16px;
       overflow-y: auto;
       div {
         font-size: 14px;
