--- a/src/app/gallery/thumbs/gallery.component.html
+++ b/src/app/gallery/thumbs/gallery.component.html
@@ -21,9 +21,26 @@
   </section>
 </div>
 <div class="mobile" >
-  <carousel [isAnimated]="false" appCarouselSwipe>
+  <carousel [isAnimated]="false" appCarouselSwipe [startFromIndex]="0">
     <slide *ngFor="let image of allImages$ | async let _index = index">
       <img [src]="getImageUrl(image)" [alt]="image.titulo" style="display: block; height: 100vh; width: auto">
+      <div class="carousel-caption d-block" *ngIf="image.texto_link; else caption">
+        <div class="content">
+          <a [href]="image.link" target="_blank">{{image.texto_link}}</a>
+        </div>
+        <div class="shadow"></div>
+      </div>
+      <ng-template #caption>
+        <div class="carousel-caption d-block">
+          <div class="content">
+            <p>{{image.primeira_linha}}</p>
+            <p>{{image.segunda_linha}}</p>
+            <p>{{image.terceira_linha}}</p>
+            <p>{{image.quarta_linha}}</p>
+          </div>
+          <div class="shadow"></div>
+        </div>
+      </ng-template>
     </slide>
   </carousel>
 </div>
