--- a/src/app/gallery/view/view.component.scss
+++ b/src/app/gallery/view/view.component.scss
@@ -65,6 +65,15 @@ section.view {
       }
     }
 
+    .paint-picture {
+      flex: 1;
+      width: 100%;
+      height: 100%;
+      background-size: auto 100%;
+      background-repeat: no-repeat;
+      background-position: right top;
+    }
+
     .paint {
       height: 100%;
     }
