--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,6 +20,10 @@ main.main-container {
     text-align: center;
     width: 100%;
   }
+
+  @include media(">=phone", "<desktop") {
+    display: block;
+  }
 }
 
 .menu-wrapper {
