--- a/src/app/components/dynamic-background/dynamic-background.component.html
+++ b/src/app/components/dynamic-background/dynamic-background.component.html
@@ -1,5 +1,5 @@
 <div class="banner-wrapper">
-  <carousel [isAnimated]="true">
+  <carousel [isAnimated]="true" [interval]="2000">
     <slide *ngFor="let banner of banners$ | async let _index = index">
       <img [src]="getImageUrl(banner)" [alt]="banner.titulo" style="display: block; height: 100vh; width: auto">
     </slide>
