--- a/src/app/components/dynamic-background/dynamic-background.component.scss
+++ b/src/app/components/dynamic-background/dynamic-background.component.scss
@@ -12,3 +12,29 @@
 :host ::ng-deep .carousel-control {
   display: none;
 }
+
+:host ::ng-deep {
+  carousel.slide-animated {
+    slide.item {
+      animation-duration: 1s;
+      animation-fill-mode: both;
+      &.active {
+        width: 100%;
+        animation-name: carouselSlideIn;
+      }
+      &:not(.active) {
+        display: table-cell;
+        animation-name: carouselSlideOut;
+      }
+    }
+  }
+
+  @keyframes carouselSlideIn {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(0); }
+  }
+  @keyframes carouselSlideOut {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-100%); }
+  }
+}
